
[package]
name = "im_ternary_tree"
version = "0.0.17"
edition = "2021"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
license = "MIT"
description = "Structural sharing ternary tree, i.e. immutable data structure"
homepage = "https://github.com/calcit-lang/ternary-tree.rs/"
documentation = "https://docs.rs/crate/im_ternary_tree/"
repository = "https://github.com/calcit-lang/ternary-tree.rs/"
readme = "README.md"
keywords = ["ternary", "tree", "structual-sharing", "immutable"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "accessing"
harness = false

[profile.release]
debug = true
